[package]
name = "fantoir-datasource"
version = "0.1.0"
edition = "2021"
description = "Generates a Postgres table from FANTOIR raw file"
authors = [
    "Sébastien Santoro <dereckson@espace-win.org>"
]
license = "BSD-2-Clause"

[dependencies]

[dependencies.async-scoped]
version = "~0.7.1"
features = ["use-tokio"]

[dependencies.clap]
version = "~4.0.32"
features = ["derive"]

[dependencies.sqlx]
version = "~0.6.2"
features = ["runtime-tokio-native-tls", "postgres", "chrono"]

[dependencies.tokio]
version = "~1.23.0"
features = ["full"]
