[package]
name = "fantoir-datasource"
version = "0.1.0"
edition = "2021"
description = "Generates a Postgres table from FANTOIR raw file"
authors = [
    "Sébastien Santoro <dereckson@espace-win.org>"
]
license = "BSD-2-Clause"

[dependencies]
lazy_static = "~1.4.0"
oxrdf = "~0.1.1"
sparesults = "~0.1.3"

[dependencies.async-scoped]
version = "~0.7.1"
features = ["use-tokio"]

[dependencies.clap]
version = "~4.0.32"
features = ["derive"]

[dependencies.reqwest]
version = "~0.11.13"
features = ["gzip", "deflate"]

[dependencies.sqlx]
version = "~0.6.2"
features = ["runtime-tokio-native-tls", "postgres", "chrono"]

[dependencies.tokio]
version = "~1.23.0"
features = ["full"]
