[package]
name = "fantoir-datasource"
version = "0.1.0"
edition = "2021"
description = "Generates a Postgres table from FANTOIR raw file"
authors = [
    "Sébastien Santoro <dereckson@espace-win.org>"
]
license = "BSD-2-Clause"

[dependencies]
chrono = "~0.4.23"
lazy_static = "~1.4.0"
opendatasoft-explore-api = { version = "0.1.0",  path = "../opendatasoft-explore-api" }
oxrdf = "~0.1.1"
regex = "~1.8.1"
sparesults = "~0.1.3"

[dependencies.async-scoped]
version = "~0.7.1"
features = ["use-tokio"]

[dependencies.clap]
version = "~4.3.0"
features = ["derive"]

[dependencies.reqwest]
version = "~0.11.18"
features = ["gzip", "deflate"]

[dependencies.sqlx]
version = "~0.6.2"
features = ["runtime-tokio-native-tls", "postgres", "chrono"]

[dependencies.tokio]
version = "~1.28.1"
features = ["full"]
