[package]
name = "fantoir-datasource"
version = "0.2.0"
edition = "2021"
description = "Generates a Postgres table from FANTOIR raw file"
authors = [
    "Sébastien Santoro <dereckson@espace-win.org>"
]
license = "BSD-2-Clause"

[dependencies]
chrono = "~0.4.38"
ds-http-client = { version = "0.1.0",  path = "../ds-http-client" }
lazy_static = "~1.5.0"
opendatasoft-explore-api = { version = "0.1.1",  path = "../opendatasoft-explore-api" }
oxrdf = "~0.1.7"
regex = "~1.10.6"
sparql-client = { version = "0.1.0",  path = "../sparql-client" }

[dependencies.async-scoped]
version = "~0.9.0"
features = ["use-tokio"]

[dependencies.clap]
version = "~4.5.16"
features = ["derive"]

[dependencies.sqlx]
version = "~0.8.1"
features = ["runtime-tokio-native-tls", "postgres", "chrono"]

[dependencies.tokio]
version = "~1.39.3"
features = ["full"]
