[package]
name = "language-subtag-registry-datasource"
version = "0.1.1"
edition = "2021"
description = "Downloads and transforms IANA language subtag registry"
authors = [
    "Sébastien Santoro <dereckson@espace-win.org>"
]
license = "BSD-2-Clause"

[dependencies]
lazy_static = "1.5.0"
regex = "1.10.6"

[dependencies.clap]
version = "4.5.16"
features = ["derive"]

[dependencies.reqwest]
version = "~0.12.7"
features = ["gzip", "deflate"]

[dependencies.tokio]
version = "1.39.3"
features = ["full"]
