[package]
name = "opendatasoft-explore-api"
version = "0.1.0"
description = "HTTP client for Opendatasoft Explore API v2"
authors = [
    "Sébastien Santoro <dereckson@espace-win.org>"
]
license = "BSD-2-Clause"
readme = "README.md"
keywords = [ "Opendatasoft" ]
categories = [ "api-bindings" ]
repository = "https://devcentral.nasqueron.org/source/datasources/browse/main/opendatasoft-explore-api/"
homepage = "https://agora.nasqueron.org/Nasqueron_Datasources"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "~1.3.0" # Keep in sync with reqwest
chrono = { version = "~0.4", features = ["serde"] }
reqwest = {version = "~0.11.13" }
serde = "~1.0.152"
serde_derive = "~1.0.152"
serde_json = "~1.0.91"

[dev-dependencies]
mockito = "~0.31.1"
lazy_static = "~1.4.0"
tokio = { version = "~1.23.0", features = ["macros", "rt"] }
