[package]
name = "opendatasoft-explore-api"
version = "0.1.1"
description = "HTTP client for Opendatasoft Explore API v2"
authors = [
    "Sébastien Santoro <dereckson@espace-win.org>"
]
license = "BSD-2-Clause"
readme = "README.md"
keywords = [ "Opendatasoft" ]
categories = [ "api-bindings" ]
repository = "https://devcentral.nasqueron.org/source/datasources/browse/main/opendatasoft-explore-api/"
homepage = "https://agora.nasqueron.org/Nasqueron_Datasources"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "~1.7.1" # Keep in sync with reqwest
chrono = { version = "~0.4", features = ["serde"] }
reqwest = {version = "~0.12.7" }
serde = "~1.0.209"
serde_derive = "~1.0.209"
serde_json = "~1.0.127"

[dev-dependencies]
mockito = "~1.5.0"
lazy_static = "~1.5.0"

[dependencies.tokio]
version = "~1.39.3"
features = ["macros", "rt"]
