[package]
name = "rfc-datasource"
version = "0.1.1"
edition = "2021"
description = "Downloads and transforms RFC index"
authors = [
    "Sébastien Santoro <dereckson@espace-win.org>"
]
license = "BSD-2-Clause"

[dependencies]
lazy_static = "1.5.0"
regex = "1.10.6"

[dependencies.clap]
version = "4.3.0"
features = ["derive"]

[dependencies.reqwest]
version = "~0.12.7"

[dependencies.tokio]
version = "1.39.3"
features = ["full"]
