[package]
name = "sparql-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ds-http-client = { version = "0.1.0",  path = "../ds-http-client" }
oxrdf = "~0.1.7"
lazy_static = "~1.5.0"
tokio = "~1.39.3"

[dependencies.reqwest]
version = "~0.12.7"
features = ["gzip", "deflate"]

[dependencies.sparesults]
version = "~0.1.8"
features = ["rdf-star"]
